2005-05-06  Sarfraaz Ahmed <asarfraaz@novell.com>

	* filter-rule.c : Remove markup from translatable string. Fixes #268390
	Patch submitted by Priit Laes

2005-02-17  Harry Lu  <harry.lu@sun.com>

	Fix for 72676.

	* rule-editor.c: (double_click): call gtk_tree_selection_get_selected
	to see if there is a row selected.

2005-02-09  Hans Petter Jansson  <hpj@novell.com>

	* Makefile.am: Install shared libraries in privlibdir.

2005-01-11  Not Zed  <NotZed@Ximian.com>

	* filter-part.c (filter_part_expand_code): cast lenght specifiers
	to int.

2004-12-02  Diego Sevilla Ruiz  <dsevilla@dsevilla>

	* filter.glade: Added label "Show filters for mail:".
	
	* filter-rule.c: Capitalize Ingoing and Outgoing labels.
	Fixes #46229.
	
2004-11-29  Mengjie Yu  <meng-jie.yu@sun.com>

	* filter-rule.c: (get_widget):add mnemonic widget in search box.

2004-11-15  Not Zed  <NotZed@Ximian.com>

	* *.c: Moved stuff from e-util to libedataserver.

	* filter-system-flag.c: removed gal header.

2004-07-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* filter-file.c: added the "use_filechooser" property to the 
	GnomeFileEntry

2004-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* filter-input.c (xml_encode): encode entities. fixes bug #46677.

2004-06-18  Jeffrey Stedfast  <fejj@ximian.com>

	* filter-errors.xml.h: Re-added - THIS IS NOT TO BE REMOVED!!!!

2004-06-17  Rodney Dawes  <dobey@novell.com>

	* filter-errors.xml.h: Remove this generated file from CVS

2004-06-17  Not Zed  <NotZed@Ximian.com>

	** See #59885.

	** Moved all of the mailer specific filter stuff into mail/*.

	* filter-element.c (copy_value): implement for base types.

	* filter-element.c (filter_element_copy_value): do this as a
	virtual method.

	* filter.glade: moved the vfolder stuff to mail/

	* libfilter-i18n.h: removed, moved to mailer.

	* filter-errors.xml: moved the vfolder/filtering errors to the
	mail error file.

	* Makefile.am (EXTRA_DIST): moved *types.xml to mail.