@@ -35,7 +35,7 @@
 
 #include "filter-datespec.h"
 #include "libedataserver/e-sexp.h"
-#include "widgets/misc/e-error.h"
+#include "e-util/e-error.h"
 
 #define d(x)
 
