@@ -1,34 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<error-list domain="filter">
-
- <error id="no-date" type="error">
-  <primary>Missing date.</primary>
-  <secondary>You must choose a date.</secondary>
- </error>
-
- <error id="no-file" type="error">
-  <primary>Missing file name.</primary>
-  <secondary>You must specify a file name.</secondary>
- </error>
-
- <error id="bad-file" type="error">
-  <primary>File &quot;{0}&quot; does not exist or is not a regular file.</primary>
-  <secondary>You must specify a file name.</secondary>
- </error>
-
- <error id="bad-regexp" type="error">
-  <primary>Bad regular expression &quot;{0}&quot;.</primary>
-  <secondary>Could not compile regular expression &quot;{1}&quot;.</secondary>
- </error>
-
- <error id="no-name" type="error">
-  <primary>Missing name.</primary>
-  <secondary>You must name this filter.</secondary>
- </error>
-
- <error id="bad-name-notunique" type="error">
-  <primary>Name &quot;{0}&quot; already used.</primary>
-  <secondary>Please choose another name.</secondary>
- </error>
-
-</error-list>
