@@ -1,24 +1,0 @@
-/* filter:no-date primary */
-char *s = N_("Missing date.");
-/* filter:no-date secondary */
-char *s = N_("You must choose a date.");
-/* filter:no-file primary */
-char *s = N_("Missing file name.");
-/* filter:no-file secondary */
-char *s = N_("You must specify a file name.");
-/* filter:bad-file primary */
-char *s = N_("File \"{0}\" does not exist or is not a regular file.");
-/* filter:bad-file secondary */
-char *s = N_("You must specify a file name.");
-/* filter:bad-regexp primary */
-char *s = N_("Bad regular expression \"{0}\".");
-/* filter:bad-regexp secondary */
-char *s = N_("Could not compile regular expression \"{1}\".");
-/* filter:no-name primary */
-char *s = N_("Missing name.");
-/* filter:no-name secondary */
-char *s = N_("You must name this filter.");
-/* filter:bad-name-notunique primary */
-char *s = N_("Name \"{0}\" already used.");
-/* filter:bad-name-notunique secondary */
-char *s = N_("Please choose another name.");
