@@ -29,7 +29,7 @@
 #include <gtk/gtk.h>
 #include <libgnome/gnome-i18n.h>
 
-#include "widgets/misc/e-error.h"
+#include "e-util/e-error.h"
 #include "filter-rule.h"
 #include "rule-context.h"
 #include "filter-marshal.h"
