@@ -31,7 +31,7 @@
 
 #include <libgnome/gnome-i18n.h>
 
-#include "widgets/misc/e-error.h"
+#include "e-util/e-error.h"
 #include "rule-editor.h"
 
 static int enable_undo = 0;
