@@ -1,3 +1,9 @@
+2005-05-16  Not Zed  <NotZed@Ximian.com>
+
+	* moved e-error to e-util
+
+	* Makefile.am: fix error i18n extraction
+
 2005-05-06  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* filter-rule.c : Remove markup from translatable string. Fixes #268390
